--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
@@ -23,14 +28,15 @@
         <br>
 
     <img class="zdj"  src="2.jpg" alt="">
-    <h1 id='demo' color: rgb(112, 111, 111);>Historyczny wynik  3:3</h1>
-    
+    <br>
+    <h1  id='demo' color: rgb(112, 111, 111);>Historyczny wynik  3:3</h1>
+    <br>
     <button class="pojemnik" id="myDIV"
     type="button" onclick="myFunction()">CLICK IT</button>
 </div>
 
  <button  style="display: none;" id="znika">go home</button>  
- <div class="fot"><br><br>
+ <div class="fot">
     <h3>15 minut codziennie poniższego ćwiczenia <br> i w następnym miesiącu <br>wygrywamy meczyk</h3>
     <video width="340" height="240" controls  loop>
         <source src="bn.mp4" type="video/mp4">
