--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <img class="zdj"  src="2.jpg" alt="">
     <br>
-    <h1  id='demo' color: rgb(112, 111, 111);>Historyczny wynik  3:3</h1>
+    <h1  id='demo' color: rgb(112, 111, 111);>  Pierwszy pojedynek  :  3 do 3</h1>
     <br>
     <button class="pojemnik" id="myDIV"
     type="button" onclick="myFunction()">CLICK IT</button>
